<resources>
    <string name="app_name">Expense Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Expense Manager</string>
    <string name="nav_header_subtitle">shashank.mayur@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_overview">Overview</string>
    <string name="menu_income">Income</string>
    <string name="menu_expense">Expense</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
