<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_visibility_black_24dp"
            android:title="@string/menu_overview" />
        <item
            android:id="@+id/nav_income"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/menu_income" />
        <item
            android:id="@+id/nav_expense"
            android:icon="@drawable/ic_account_balance_wallet_black_24dp"
            android:title="@string/menu_expense" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
