<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_overview">

    <fragment
        android:id="@+id/nav_overview"
        android:name="com.example.expensemanager.ui.Overview.OverviewFragment"
        android:label="@string/menu_overview"
        tools:layout="@layout/fragment_overview" />

    <fragment
        android:id="@+id/nav_income"
        android:name="com.example.expensemanager.ui.Income.IncomeFragment"
        android:label="@string/menu_income"
        tools:layout="@layout/fragment_income" />

    <fragment
        android:id="@+id/nav_expense"
        android:name="com.example.expensemanager.ui.Expense.FragmentExpense"
        android:label="@string/menu_expense"
        tools:layout="@layout/fragment_expense" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.expensemanager.ui.Settings.ToolsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.expensemanager.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.expensemanager.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>